--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 
 <body id="page-top">
-    <!-- <iframe src="music/Full Track.mp3?autoplay=1" frameborder="0"></iframe> -->
 
+    <embed src="music/Full Track.mp3" loop="true" autostart="true" width="2" height="0">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-5">
@@ -52,10 +52,10 @@
         <iframe src="Lobby/lobby-index.html" height="720px" width="100%" title="description"></iframe>
 
 
-        <div style="width: 300px; height: 115px;">
+        <!-- <div style="width: 300px; height: 115px;">
             <embed src="music/Full Track.mp3?autoplay=1" wmode="transparent" type="video/mp4" width="100%" height="100%"
                 allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen title="Keyboard Cat">
-        </div>
+        </div> -->
         </div>
         </div>
         </div>
