--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 </head>
 
 <body id="page-top">
-
-    <embed src="music/Full Track.mp3" loop="true" autostart="true" width="2" height="0">
+    <audio id="bgMusic">
+        <source src="music/Full Track.mp3" type="audio/mp3">
+    </audio>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-5">
@@ -254,11 +255,7 @@
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <script>
-            $(document).ready(function () {
-                $("#myModal-intro").modal('show');
-            });
-        </script>
+        <script src="js/index.js"></script>
 </body>
 
 </html>
