--- a/mainhall.html
+++ b/mainhall.html
@@ -27,7 +27,10 @@
 </head>
 
 <body id="page-top">
-    <iframe style="display: none;" src="music/Full Track.mp3?autoplay=1" frameborder="0"></iframe>
+
+    <audio id="bgMusic">
+        <source src="music/Full Track.mp3" type="audio/mp3">
+    </audio>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-5">
